--- a/tex/1.tex
+++ b/tex/1.tex
@@ -137,7 +137,7 @@ Cuối cùng, các nhà nghiên cứu xử lý ngôn ngữ sử dụng rất nhi
 
 \section{Ngôn ngữ, suy nghĩ và sự hiểu biết}
 
-Với nhiều người, khả năng máy tính có thể xử lý được ngôn ngữ một cách thành thạo như con người là dấu hiệu của trí thông minh thực sự. Nguyên nhân của niềm tin này đến từ việc sử dụng ngôn ngữ hiệu quả gắn liền với các khả năng nhận thức của chúng ta. Một trong những người đầu tiên coi tác động của sự liên hệ đó là Alan Turing (1950). Trong bài báo nổi tiếng này, Turing giới thiệu một thử nghiệm mà sau này được biết với tên Turing test. Turing bắt đầu với một luận điểm, rằng câu hỏi "Liệu máy tính có thể suy nghĩ hay không?" là một câu hỏi rất khó trả lời chính xác vì sự nhập nhằng vốn có trong các cụm từ \textit{máy tính} và \textit{nghĩ}. Thay vào đó, ông đề xuất một phép thử thực tế, một trò chơi, trong đó việc sử dụng ngôn ngữ của máy tính cho thấy khả năng suy nghĩ của nó. Nếu máy tính có thể thắng trò chơi này, nó sẽ được đánh giá là thông minh.
+Với nhiều người, khả năng máy tính có thể xử lý được ngôn ngữ một cách thành thạo như con người là dấu hiệu của trí thông minh thực sự. Nguyên nhân của niềm tin này đến từ việc sử dụng ngôn ngữ hiệu quả gắn liền với các khả năng nhận thức của chúng ta. Một trong những người đầu tiên coi tác động của sự liên hệ đó là \citet{machinery1950computing}. Trong bài báo nổi tiếng này, Turing giới thiệu một thử nghiệm mà sau này được biết với tên Turing test. Turing bắt đầu với một luận điểm, rằng câu hỏi "Liệu máy tính có thể suy nghĩ hay không?" là một câu hỏi rất khó trả lời chính xác vì sự nhập nhằng vốn có trong các cụm từ \textit{máy tính} và \textit{nghĩ}. Thay vào đó, ông đề xuất một phép thử thực tế, một trò chơi, trong đó việc sử dụng ngôn ngữ của máy tính cho thấy khả năng suy nghĩ của nó. Nếu máy tính có thể thắng trò chơi này, nó sẽ được đánh giá là thông minh.
 
 Trong trò chơi của Turing, có ba bên tham gia: hai người và một máy tính. Một người đóng vai trò là người hỏi. Để chiến thắng, người hỏi cần phải xác định xem hai thành viên còn lại ai là máy tính bằng cách hỏi một chuỗi câu hỏi thông qua việc gõ bàn phím. Nhiệm vụ của máy tính là lừa người hỏi tin rằng nó là con người bằng cách trả lời các câu hỏi. Nhiệm vụ của người chơi thứ hai là thuyết phục người hỏi, người chơi kia là máy tính, mình mới là con người.
 
@@ -156,7 +156,7 @@ Trong trò chơi của Turing, có ba bên tham gia: hai người và một máy
 
 Turing dự đoán đến hết thế kỷ hai mươi, một chiếc máy tính với 10 gigabytes bộ nhớ có khoảng 30\% cơ hội lừa một người trong 5 phút hỏi đáp. Có một thực tế rằng bạn luôn có thể lừa một vài người trong tất cả mọi lần, không rõ tiêu chuẩn này sẽ nghiêm ngặt đến đâu. Mặt khác, vấn đề quan trọng của Turing là việc sử dụng ngôn ngữ thành thạo như con người, là một cách thử trí thông minh.
 
-Rất ngạc nhiên, nhiều vấn đề được đề xuất bởi Turing liên hệ nhiều đến chương trình \textbf{ELIZA} xuất hiện vào năm 1966 (Weizenbaum, 1966). ELIZA là hệ thống xử lý ngôn ngữ tự nhiên có khả năng thực hiện một số đoạn hội thoại với người dùng. Cùng xem xét đoạn hội thoại sau đây với một phiên bản của ELIZA
+Rất ngạc nhiên, nhiều vấn đề được đề xuất bởi Turing liên hệ nhiều đến chương trình \textbf{ELIZA} xuất hiện vào năm 1966 \citep{Weizenbaum:1966:ECP:365153.365168}. ELIZA là hệ thống xử lý ngôn ngữ tự nhiên có khả năng thực hiện một số đoạn hội thoại với người dùng. Cùng xem xét đoạn hội thoại sau đây với một phiên bản của ELIZA
 
 \vspace{0.15cm}
 \hspace*{-1cm}
