--- a/util/layout/main.tex
+++ b/util/layout/main.tex
@@ -1,8 +1,6 @@
 \input{begin.tex}
 
-\input{2.tex}
-
-abc ~\cite{Le-Hong16} def
+\input{content.tex}
 
 \bibliography{mybib}
 \bibliographystyle{acl_natbib}
