--- a/tex/1.bib
+++ b/tex/1.bib
@@ -1,3 +1,44 @@
+@article{wise2007learning,
+  title={Learning to read with a virtual tutor: Foundations to literacy},
+  author={Wise, Barbara and Cole, Ron and Van Vuuren, Sarel and Schwartz, Scott and Snyder, Lynn and Ngampatipatpong, Nattawut and Tuantranont, Jariya and Pellom, Bryan},
+  journal={Interactive literacy education: Facilitating literacy environments through technology},
+  pages={31--75},
+  year={2007},
+  publisher={Erlbaum Mahwah, NJ}
+}
+
+@book{reeves1996media,
+  title={The media equation: How people treat computers, television, and new media like real people and places.},
+  author={Reeves, Byron and Nass, Clifford Ivar},
+  year={1996},
+  publisher={Cambridge university press}
+}
+
+@article{shieber1994lessons,
+  title={Lessons from a restricted Turing test},
+  author={Shieber, Stuart M},
+  journal={arXiv preprint cmp-lg/9404002},
+  year={1994}
+}
+
+@article{searle1980minds,
+  title={Minds, brains, and programs},
+  author={Searle, John R},
+  journal={Behavioral and brain sciences},
+  volume={3},
+  number={3},
+  pages={417--424},
+  year={1980},
+  publisher={Cambridge University Press}
+}
+
+@article{weizenbaum1976computer,
+  title={Computer power and human reason: From judgment to calculation.},
+  author={Weizenbaum, Joseph},
+  year={1976},
+  publisher={WH Freeman \& Co}
+}
+
 @article{Weizenbaum:1966:ECP:365153.365168,
  author = {Weizenbaum, Joseph},
  title = {ELIZA - a Computer Program for the Study of Natural Language Communication Between Man and Machine},
@@ -17,6 +58,65 @@
  address = {New York, NY, USA},
 }
 
+@article{Backus1960ReportOT,
+  title={Report on the algorithmic language ALGOL 60},
+  author={John W. Backus and Friedrich L. Bauer and Julien Green and C. Katz and John McCarthy and Alan J. Perlis and Heinz Rutishauser and Klaus Samelson and Bernard Vauquois and Joseph Henry Wegstein and Adriaan van Wijngaarden and Michael Woodger},
+  journal={Commun. ACM},
+  year={1960},
+  volume={3},
+  pages={299-314}
+}
+
+@inproceedings{Backus1959TheSA,
+  title={The syntax and semantics of the proposed international algebraic language of the Zurich ACM-GAMM Conference},
+  author={John W. Backus},
+  booktitle={IFIP Congress},
+  year={1959}
+}
+
+@book{chomsky1956logical,
+  title={The logical structure of linguistic theory},
+  author={Chomsky, Noam},
+  year={1956},
+  publisher={Plenum press New York}
+}
+
+@incollection{Kleene56,
+  added-at = {2012-10-16T14:29:51.000+0200},
+  address = {Princeton, NJ},
+  author = {Kleene, S. C.},
+  biburl = {https://www.bibsonomy.org/bibtex/2cc51c86a4093c3f989db80fb8d7831be/jil},
+  booktitle = {Automata Studies},
+  editor = {Shannon, Claude and McCarthy, John},
+  interhash = {e9ce8516d977ec88fa380222354b3980},
+  intrahash = {cc51c86a4093c3f989db80fb8d7831be},
+  keywords = {expression kleene paper regular star},
+  pages = {3--41},
+  publisher = {Princeton University Press},
+  timestamp = {2013-11-23T20:11:51.000+0100},
+  title = {Representation of events in nerve nets and finite automata},
+  url = {http://www.diku.dk/hjemmesider/ansatte/henglein/papers/kleene1956.pdf},
+  year = 1956
+}
+
+@article{davis1952automatic,
+  title={Automatic recognition of spoken digits},
+  author={Davis, KH and Biddulph, R and Balashek, Stephen},
+  journal={The Journal of the Acoustical Society of America},
+  volume={24},
+  number={6},
+  pages={637--642},
+  year={1952},
+  publisher={ASA}
+}
+
+@techreport{kleene1951representation,
+  title={Representation of events in nerve nets and finite automata},
+  author={Kleene, Stephen Cole},
+  year={1951},
+  institution={RAND PROJECT AIR FORCE SANTA MONICA CA}
+}
+
 @article{machinery1950computing,
   title={Computing machinery and intelligence-AM Turing},
   author={Alan Turing},
@@ -25,4 +125,35 @@
   number={236},
   pages={433},
   year={1950}
+}
+
+@article{shannon1948mathematical
+,	author	= {Shannon, C.E.}
+,	title	= {A Mathematical Theory of Communication}
+,	journal	= {The Bell System Technical Journal}
+,	year	= {1948}
+,	volume	= {XXVII}
+,	pages	= {379--423 (July), 623--656 (October)}
+}
+
+@article{koenig1946sound,
+  title={The sound spectrograph},
+  author={Koenig, W and Dunn, HK and Lacy, LY},
+  journal={The Journal of the Acoustical Society of America},
+  volume={18},
+  number={1},
+  pages={19--49},
+  year={1946},
+  publisher={Asa}
+}
+
+@article{mcculloch1943logical,
+  title={A logical calculus of the ideas immanent in nervous activity},
+  author={McCulloch, Warren S and Pitts, Walter},
+  journal={The bulletin of mathematical biophysics},
+  volume={5},
+  number={4},
+  pages={115--133},
+  year={1943},
+  publisher={Springer}
 }
