--- a/tex/1.bib
+++ b/tex/1.bib
@@ -21,6 +21,15 @@
   year={1994}
 }
 
+@article{bresnan1982introduction,
+  title={Introduction: Grammars as mental representations of language},
+  author={Bresnan, Joan and Kaplan, Ronald M and others},
+  journal={The mental representation of grammatical relations},
+  pages={xvii--lii},
+  year={1982},
+  publisher={Mit Press Cambridge (Mass.)}
+}
+
 @article{searle1980minds,
   title={Minds, brains, and programs},
   author={Searle, John R},
@@ -32,11 +41,70 @@
   publisher={Cambridge University Press}
 }
 
+@article{pereira1980definite,
+  title={Definite clause grammars for language analysis—a survey of the formalism and a comparison with augmented transition networks},
+  author={Pereira, Fernando CN and Warren, David HD},
+  journal={Artificial intelligence},
+  volume={13},
+  number={3},
+  pages={231--278},
+  year={1980},
+  publisher={Elsevier}
+}
+
+@ARTICLE {kaym1979,
+    author  = "Kay, M",
+    title   = "Functional grammar",
+    journal = "BLS-79",
+    year    = "1979"
+}
+
 @article{weizenbaum1976computer,
   title={Computer power and human reason: From judgment to calculation.},
   author={Weizenbaum, Joseph},
   year={1976},
   publisher={WH Freeman \& Co}
+}
+
+@article{colmerauer1975grammaires,
+  title={Les grammaires de m{\'e}tamorphose GIA},
+  author={Colmerauer, Alain},
+  journal={Internal publica},
+  year={1975}
+}
+
+@article{winograd1972understanding,
+  title={Understanding natural language},
+  author={Winograd, Terry},
+  journal={Cognitive psychology},
+  volume={3},
+  number={1},
+  pages={1--191},
+  year={1972},
+  publisher={Elsevier}
+}
+
+@book{simmons1972semantic,
+  title={Semantic networks: their computation and use for understanding English sentences},
+  author={Simmons, Robert F},
+  year={1972},
+  publisher={Department of Computer Sciences and Computer-Assisted Instruction Laboratory, University of Texas}
+}
+
+@misc{colmerauer1970systemes,
+  title={Les systemes-q ou un formalisme pour analyser et synth{\'e}tiser des phrases sur ordinateur. d{\'e}partement d’informatique de l’Universit{\'e} de Montr{\'e}al, publication interne, 43},
+  author={Colmerauer, A},
+  year={1970},
+  publisher={September}
+}
+
+@article{fillmore1968lexical,
+  title={Lexical entries for verbs},
+  author={Fillmore, Charles J},
+  journal={Foundations of language},
+  pages={373--393},
+  year={1968},
+  publisher={JSTOR}
 }
 
 @article{Weizenbaum:1966:ECP:365153.365168,
@@ -58,6 +126,21 @@
  address = {New York, NY, USA},
 }
 
+@article{mosteller1964inference,
+  title={Inference and disputed authorship: The Federalist},
+  author={Mosteller, Frederick and Wallace, David},
+  year={1964},
+  publisher={Addison-Wesley}
+}
+
+@book{harris1962string,
+  title={String analysis of sentence structure},
+  author={Harris, Zellig Sabbettai},
+  number={1},
+  year={1962},
+  publisher={Mouton}
+}
+
 @article{Backus1960ReportOT,
   title={Report on the algorithmic language ALGOL 60},
   author={John W. Backus and Friedrich L. Bauer and Julien Green and C. Katz and John McCarthy and Alan J. Perlis and Heinz Rutishauser and Klaus Samelson and Bernard Vauquois and Joseph Henry Wegstein and Adriaan van Wijngaarden and Michael Woodger},
@@ -65,6 +148,15 @@
   year={1960},
   volume={3},
   pages={299-314}
+}
+
+@inproceedings{bledsoe1959pattern,
+  title={Pattern recognition and reading by machine},
+  author={Bledsoe, Woodrow Wilson and Browning, Iben},
+  booktitle={Papers presented at the December 1-3, 1959, eastern joint IRE-AIEE-ACM computer conference},
+  pages={225--232},
+  year={1959},
+  organization={ACM}
 }
 
 @inproceedings{Backus1959TheSA,
