update bibliography tititle

--- a/util/layout/begin.tex
+++ b/util/layout/begin.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{book}
 \usepackage[utf8]{vietnam}
-\usepackage[vietnam,english]{babel}
+\usepackage[english,vietnam]{babel}
 
 \usepackage{times}
 \usepackage{multirow}
@@ -12,8 +12,12 @@
 \usepackage[title]{appendix}
 \usepackage{enumitem}
 
+% ######################################
+%              Bibliography
+% ######################################
 \usepackage{cite}
 \usepackage{undertheseabook}
+
 
 % ######################################
 %                 QUOTE
@@ -90,6 +94,8 @@
 \makeatletter
 \newcommand\footnoteref[1]{\protected@xdef\@thefnmark{\ref{#1}}\@footnotemark}
 \makeatother
+
+
 
 \title{Xử lý ngôn ngữ và tiếng nói}
 
