--- a/util/layout/main.tex
+++ b/util/layout/main.tex
@@ -2,7 +2,9 @@
 
 \input{content.tex}
 
+\renewcommand\bibname{Danh mục tài liệu tham khảo}
 \bibliography{mybib}
 \bibliographystyle{acl_natbib}
+
 
 \input{end.tex}
