--- a/util/styles/undertheseabook.sty
+++ b/util/styles/undertheseabook.sty
@@ -64,9 +64,8 @@
 % sections with less space
 \def\section{\@startsection {section}{1}{\z@}{-2.0ex plus
     -0.5ex minus -.2ex}{1.5ex plus 0.3ex minus .2ex}{\large\bf\raggedright}}
-\def\subsection{\@startsection{subsection}{2}{\z@}{-1.8ex plus
-    -0.5ex minus -.2ex}{0.8ex plus .2ex}{\normalsize\bf\raggedright}}
-%% changed by KO to - values to get teh initial parindent right
+\def\subsection{\@startsection{subsection}{2}{\z@}{-2ex plus
+    -0.5ex minus -5ex}{2.5ex plus 0.3ex minus .2ex}{\normalsize\bf\raggedright}}
 \def\subsubsection{\@startsection{subsubsection}{3}{\z@}{-1.5ex plus
    -0.5ex minus -.2ex}{0.5ex plus .2ex}{\normalsize\bf\raggedright}}
 \def\paragraph{\@startsection{paragraph}{4}{\z@}{1.5ex plus
