--- a/tex/1.bib
+++ b/tex/1.bib
@@ -1,3 +1,11 @@
+@article{manning3h,
+  title={H.(2008) Introduction to Information Retrieval},
+  author={Manning, Christopher D. and Raghavan, Prabhakar and Schütze, Hinrich},
+  journal={Cambridge University Press, New York, NY, USA},
+  volume={3},
+  pages={38--48}
+}
+
 @article{wise2007learning,
   title={Learning to read with a virtual tutor: Foundations to literacy},
   author={Wise, Barbara and Cole, Ron and Van Vuuren, Sarel and Schwartz, Scott and Snyder, Lynn and Ngampatipatpong, Nattawut and Tuantranont, Jariya and Pellom, Bryan},
@@ -7,6 +15,29 @@
   publisher={Erlbaum Mahwah, NJ}
 }
 
+@inproceedings{bird2004nltk,
+  title={NLTK: the natural language toolkit},
+  author={Bird, Steven and Loper, Edward},
+  booktitle={Proceedings of the ACL 2004 on Interactive poster and demonstration sessions},
+  pages={31},
+  year={2004},
+  organization={Association for Computational Linguistics}
+}
+
+@article{russell2002artificial,
+  title={Artificial intelligence: a modern approach (International Edition)},
+  author={Russell, Stuart J and Norvig, Peter},
+  year={2002},
+  publisher={$\{$Pearson US Imports \& PHIPEs$\}$}
+}
+
+@book{manning1999foundations,
+  title={Foundations of statistical natural language processing},
+  author={Manning, Christopher D and Manning, Christopher D and Sch{\"u}tze, Hinrich},
+  year={1999},
+  publisher={MIT press}
+}
+
 @book{reeves1996media,
   title={The media equation: How people treat computers, television, and new media like real people and places.},
   author={Reeves, Byron and Nass, Clifford Ivar},
@@ -14,11 +45,56 @@
   publisher={Cambridge university press}
 }
 
+@book{charniak1996statistical,
+  title={Statistical language learning},
+  author={Charniak, Eugene},
+  year={1996},
+  publisher={MIT press}
+}
+
+@book{allen1995natural,
+  title={Natural language understanding},
+  author={Allen, James},
+  year={1995},
+  publisher={Pearson}
+}
+
 @article{shieber1994lessons,
   title={Lessons from a restricted Turing test},
   author={Shieber, Stuart M},
   journal={arXiv preprint cmp-lg/9404002},
   year={1994}
+}
+
+@inproceedings{partee1990domains,
+  title={Domains of Quantifications and Semantic Typology},
+  author={Partee, Barbara H},
+  year={1990},
+  organization={Mid-America Linguistics Conference}
+}
+
+@book{gazdar1989natural,
+  title={Natural language processing in Lisp: An introduction to computational linguistics},
+  author={Gazdar, Gerald and Mellish, Christopher S},
+  year={1989},
+  publisher={Addison-Wesley Wokingham, England}
+}
+
+@book{Pereira:1987:PNL:576399,
+ author = {Pereira, Fernando C. N. and Shieber, Stuart M.},
+ title = {PROLOG and Natural Language Analysis},
+ year = {1987},
+ isbn = {0937073172},
+ publisher = {CSLI Publications},
+ address = {Stanford, CA, USA},
+}
+[
+
+@article{grosz1986readings,
+  title={Readings in natural language processing},
+  author={Grosz, Barbara J and Jones, Karen Sparck and Webber, Bonnie Lynn},
+  year={1986},
+  publisher={Kaufman Publishers Inc., Los Altos, CA}
 }
 
 @article{bresnan1982introduction,
