--- a/tex/1.tex
+++ b/tex/1.tex
@@ -309,4 +309,4 @@ Các tạp chí gồm có \textit{Conputational Linguistics}, \textit{Natural La
 
 Các công trình trong xử lý ngôn ngữ từ quan điểm trí tuệ nhân tạo có thể tìm thấy trong các hội nghị thường niên như American Association for Artificial Intelligence (AAAI), International Joint Conference on Artifical Intelligence (IJCAI). Các tập chí thường xuyên có các bài nghiên cứu về lĩnh vực xử lý ngôn ngữ và tiếng nói gồm có Machine Learning, Journal of Machine Learning Research, và Journal of Artificial Intelligence Research.
 
-Có rất nhiều quyển sách giáo khoa đề cập đến nhiều khía cạnh của xử lý ngôn ngữ và tiếng nói. Manning và Schutze (1999) (\textit{Foundations of Statistical Language Processing}) tập trung vào các mô hình thống kê trong các bài toán tagging, parsing, khử nhập nhằng, đồng tham chiếu và các bài toán khác. Charniak (1993) (\textit{Statistical Language Learning}) là một nguồn có thể truy cập, đề cập đến các vấn đề cũ hơn và nhẹ nhàng hơn. Manning et al. (2008) tập trung vào bài toán truy hồi thông tin, phân loại văn bản và phân cụm. NLTK, the Natural Language Toolkit (Bird và Loper, 2004), là một tập hợp các module và dữ liệu cho việc xử lý ngôn ngữ, với quyển sách Natural Language Processing dựa trên NLTK. Allen (1995) (Natural Language Understanding) đề cập đến các chủ đề sâu về xử lý ngôn ngữ từ quan điểm AI. Gazdar vaf Mellish (1989) (\textit{Natural Language Processing in Lisp/Prolog}) đề cập đến automata, parsing, các đặc trưng và unification và có sẵn trên mạng. Pereira và Shieber (1987) giới thiệu các chương trình parsing và dịch dựa vào Prolog. Russell và Norvig (2002) là một quyển sách giới thiệu về trí tuệ nhân tạo trong đó có các chương giới thiệu về xử lý ngôn ngữ. Partee et al. (1990) có một phần lớn đề cập đến các kiến thức toán cho ngôn ngữ học tính toán. Một tập hợp danh sách các báo cáo khoa học đáng chú ý có thể tìm được Grosz et al. (1986) (\textit{Readings in Natural Language Processing}).
+Có rất nhiều quyển sách giáo khoa đề cập đến nhiều khía cạnh của xử lý ngôn ngữ và tiếng nói. \citet{manning1999foundations} (\textit{Foundations of Statistical Language Processing}) tập trung vào các mô hình thống kê trong các bài toán tagging, parsing, khử nhập nhằng, đồng tham chiếu và các bài toán khác. \citet{charniak1996statistical} (\textit{Statistical Language Learning}) là một nguồn có thể truy cập, đề cập đến các vấn đề cũ hơn và nhẹ nhàng hơn. \citet{manning3h} tập trung vào bài toán truy hồi thông tin, phân loại văn bản và phân cụm. NLTK, the Natural Language Toolkit \citet{bird2004nltk} là một tập hợp các module và dữ liệu cho việc xử lý ngôn ngữ, với quyển sách Natural Language Processing dựa trên NLTK. \citet{allen1995natural} (Natural Language Understanding) đề cập đến các chủ đề sâu về xử lý ngôn ngữ từ quan điểm AI. \citet{gazdar1989natural} (\textit{Natural Language Processing in Lisp/Prolog}) đề cập đến automata, parsing, các đặc trưng và unification và có sẵn trên mạng. \citet{Pereira:1987:PNL:576399} giới thiệu các chương trình parsing và dịch dựa vào Prolog. \citet{russell2002artificial} là một quyển sách giới thiệu về trí tuệ nhân tạo trong đó có các chương giới thiệu về xử lý ngôn ngữ. \citet{partee1990domains} có một phần lớn đề cập đến các kiến thức toán cho ngôn ngữ học tính toán. Một tập hợp danh sách các báo cáo khoa học đáng chú ý có thể tìm được \citet{grosz1986readings} (\textit{Readings in Natural Language Processing}).
